--- a/reactClient/src/App.css
+++ b/reactClient/src/App.css
@@ -8,6 +8,15 @@ body, html,#root{
   text-align: center;
 }
 
+.doraIA{ 
+  -webkit-animation:spin 4s linear infinite;
+  -moz-animation:spin 4s linear infinite;
+  animation:spin 4s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
